crates/rome_js_formatter/tests/specs/prettier/js/decorators-export/after_export.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
export @decorator class Foo {}

export default @decorator class {}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,7 +1,5 @@
 export
-@decorator
-class Foo {}
+@decorator class Foo {}
 
 export default
-@decorator
-class {}
+@decorator class {}
```

# Output

```js
export
@decorator class Foo {}

export default
@decorator class {}
```


# Errors
```
error[SyntaxError]: expected a class, a function, or a variable declaration but instead found '@'
  ┌─ after_export.js:1:8
  │
1 │ export @decorator class Foo {}
  │        ^ Expected a class, a function, or a variable declaration here

error[SyntaxError]: expected an expression but instead found '@'
  ┌─ after_export.js:3:16
  │
3 │ export default @decorator class {}
  │                ^ Expected an expression here

error[SyntaxError]: class declarations must have a name
  ┌─ after_export.js:3:27
  │
3 │ export default @decorator class {}
  │                           ^^^^^^


```


